# obpi-r

./: LICENSE
obpi-react/: App.tsx  README.md  cargo.toml  constants.ts  index.html  metadata.json  package.json  start.sh  stop.sh  types.ts
obpi-react/apps/: AIAssistant.tsx  AIBuildAgent.tsx  AgentHub.tsx  AudioRecorder.tsx  Browser.tsx  CalendarApp.tsx  CodeCanvas.tsx  DevStudio.tsx  DeviceManager.tsx  Gallery.tsx  GeminiStudio.tsx  LiveConversation.tsx  MediaPlayer.tsx  PEPxEditor.tsx  PEPxExplorer.tsx  RecycleBin.tsx  ServerManager.tsx  SnapshotManager.tsx  SystemMonitor.tsx  SystemSettings.tsx  Terminal.tsx  VideoAnalyzer.tsx  WebView.tsx  WelcomeNote.tsx  YouTube.tsx
obpi-react/components/: AppDrawer.tsx  BIOS.tsx  CalendarPopup.tsx  ContextMenu.tsx  Desktop.tsx  DesktopIcon.tsx  Dock.tsx  DragLayer.tsx  InvertedCursor.tsx  LoginScreen.tsx  Modal.tsx  NotificationCenter.tsx  QuickSettings.tsx  StartMenu.tsx  SystemInitializer.tsx  Taskbar.tsx  WebGLBackground.tsx  Window.tsx
obpi-react/contexts/: OSContext.tsx
obpi-react/migrations/: 20240725000001_initial_schema  20240726000001_add_trash
obpi-react/obpi_cde_backend/: Cargo.toml  README.md  obpi_os.db
obpi-react/obpi_cde_backend/migrations/: 20240725000001_initial_schema.sql  20240726000001_add_trash.sql
obpi-react/obpi_cde_backend/src/: db.rs  main.rs  protocol.rs  pty_handler.rs  session.rs  vfs.rs
obpi-react/services/: VFS.ts  apiService.ts  authService.ts  commandInterpreter.ts  firmwareService.ts  geminiService.ts  kernelService.ts  loggingService.ts  pepxService.ts
(+7 files in other folders)
